feat(i18n): traducir componente DeleteUser y añadir claves a diccionarios

--- a/lang/es.json
+++ b/lang/es.json
@@ -31,5 +31,13 @@
   "Save password": "Guardar contraseña",
   "Profile": "Perfil",
   "Password": "Contraseña",
-  "Appearance": "Apariencia"
+  "Appearance": "Apariencia",
+  "Delete account": "Eliminar cuenta",
+  "Delete your account and all of its resources": "Elimina tu cuenta y todos sus recursos",
+  "Warning": "Advertencia",
+  "Please proceed with caution, this cannot be undone.": "Procede con precaución, esto no se puede deshacer.",
+  "Are you sure you want to delete your account?": "¿Estás seguro de que deseas eliminar tu cuenta?",
+  "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Una vez eliminada tu cuenta, todos sus recursos y datos también se eliminarán de forma permanente. Ingresa tu contraseña para confirmar que deseas eliminar tu cuenta permanentemente.",
+  "Password": "Contraseña",
+  "Cancel": "Cancelar"
 }
