--- a/lang/en.json
+++ b/lang/en.json
@@ -31,5 +31,13 @@
   "Save password": "Save password",
   "Profile": "Profile",
   "Password": "Password",
-  "Appearance": "Appearance"
+  "Appearance": "Appearance",
+  "Delete account": "Delete account",
+  "Delete your account and all of its resources": "Delete your account and all of its resources",
+  "Warning": "Warning",
+  "Please proceed with caution, this cannot be undone.": "Please proceed with caution, this cannot be undone.",
+  "Are you sure you want to delete your account?": "Are you sure you want to delete your account?",
+  "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.",
+  "Password": "Password",
+  "Cancel": "Cancel"
 }
