feat(i18n): traducir Sidebar y Header
- AppSidebar: items dinámicos con traducción (Dashboard, Repository, Documentation)
- NavMain: etiqueta de grupo traducida (Platform) y tooltips/textos con t()
- Claves nuevas en lang/en.json y lang/es.json

--- a/lang/en.json
+++ b/lang/en.json
@@ -39,5 +39,8 @@
   "Are you sure you want to delete your account?": "Are you sure you want to delete your account?",
   "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.",
   "Password": "Password",
-  "Cancel": "Cancel"
+  "Cancel": "Cancel",
+  "Platform": "Platform",
+  "Repository": "Repository",
+  "Documentation": "Documentation"
 }
