--- a/lang/es.json
+++ b/lang/es.json
@@ -39,5 +39,8 @@
   "Are you sure you want to delete your account?": "¿Estás seguro de que deseas eliminar tu cuenta?",
   "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Una vez eliminada tu cuenta, todos sus recursos y datos también se eliminarán de forma permanente. Ingresa tu contraseña para confirmar que deseas eliminar tu cuenta permanentemente.",
   "Password": "Contraseña",
-  "Cancel": "Cancelar"
+  "Cancel": "Cancelar",
+  "Platform": "Plataforma",
+  "Repository": "Repositorio",
+  "Documentation": "Documentación"
 }
