feat(i18n): traducir menú de usuario (Settings, Log out)

--- a/lang/en.json
+++ b/lang/en.json
@@ -42,5 +42,6 @@
   "Cancel": "Cancel",
   "Platform": "Platform",
   "Repository": "Repository",
-  "Documentation": "Documentation"
+  "Documentation": "Documentation",
+  "Log out": "Log out"
 }
