--- a/lang/es.json
+++ b/lang/es.json
@@ -42,5 +42,6 @@
   "Cancel": "Cancelar",
   "Platform": "Plataforma",
   "Repository": "Repositorio",
-  "Documentation": "Documentación"
+  "Documentation": "Documentación",
+  "Log out": "Cerrar sesión"
 }
