feat(i18n): traducir textos del componente UI Sidebar (SheetTitle/Description, Toggle Sidebar)

--- a/lang/en.json
+++ b/lang/en.json
@@ -43,5 +43,8 @@
   "Platform": "Platform",
   "Repository": "Repository",
   "Documentation": "Documentation",
-  "Log out": "Log out"
+  "Log out": "Log out",
+  "Sidebar": "Sidebar",
+  "Displays the mobile sidebar.": "Displays the mobile sidebar.",
+  "Toggle Sidebar": "Toggle Sidebar"
 }
