--- a/lang/en.json
+++ b/lang/en.json
@@ -16,7 +16,9 @@
   "Update your name and email address": "Update your name and email address",
   "Name": "Name",
   "Full name": "Full name",
+  "Email": "Email",
   "Email address": "Email address",
+  "email@example.com": "email@example.com",
   "Your email address is unverified.": "Your email address is unverified.",
   "Click here to resend the verification email.": "Click here to resend the verification email.",
   "A new verification link has been sent to your email address.": "A new verification link has been sent to your email address.",
@@ -38,7 +40,6 @@
   "Please proceed with caution, this cannot be undone.": "Please proceed with caution, this cannot be undone.",
   "Are you sure you want to delete your account?": "Are you sure you want to delete your account?",
   "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.",
-  "Password": "Password",
   "Cancel": "Cancel",
   "Platform": "Platform",
   "Repository": "Repository",
@@ -46,5 +47,37 @@
   "Log out": "Log out",
   "Sidebar": "Sidebar",
   "Displays the mobile sidebar.": "Displays the mobile sidebar.",
-  "Toggle Sidebar": "Toggle Sidebar"
+  "Toggle Sidebar": "Toggle Sidebar",
+  "Log in to your account": "Log in to your account",
+  "Enter your email and password below to log in": "Enter your email and password below to log in",
+  "Forgot password?": "Forgot password?",
+  "Remember me": "Remember me",
+  "Log in": "Log in",
+  "Don't have an account?": "Don't have an account?",
+  "Sign up": "Sign up",
+  "Create an account": "Create an account",
+  "Enter your details below to create your account": "Enter your details below to create your account",
+  "Create account": "Create account",
+  "Already have an account?": "Already have an account?",
+  "Register": "Register",
+  "Forgot password": "Forgot password",
+  "Enter your email to receive a password reset link": "Enter your email to receive a password reset link",
+  "Email password reset link": "Email password reset link",
+  "Or, return to": "Or, return to",
+  "log in": "log in",
+  "Reset password": "Reset password",
+  "Please enter your new password below": "Please enter your new password below",
+  "Confirm your password": "Confirm your password",
+  "This is a secure area of the application. Please confirm your password before continuing.": "This is a secure area of the application. Please confirm your password before continuing.",
+  "Confirm password": "Confirm password",
+  "Verify email": "Verify email",
+  "Please verify your email address by clicking on the link we just emailed to you.": "Please verify your email address by clicking on the link we just emailed to you.",
+  "Email verification": "Email verification",
+  "A new verification link has been sent to the email address you provided during registration.": "A new verification link has been sent to the email address you provided during registration.",
+  "Resend verification email": "Resend verification email",
+  "Welcome": "Welcome",
+  "Let's get started": "Let's get started",
+  "Read the": "Read the",
+  "Watch video tutorials at": "Watch video tutorials at",
+  "Deploy now": "Deploy now"
 }
