--- a/lang/es.json
+++ b/lang/es.json
@@ -16,7 +16,9 @@
   "Update your name and email address": "Actualiza tu nombre y correo electrónico",
   "Name": "Nombre",
   "Full name": "Nombre completo",
+  "Email": "Correo",
   "Email address": "Correo electrónico",
+  "email@example.com": "correo@ejemplo.com",
   "Your email address is unverified.": "Tu correo electrónico no está verificado.",
   "Click here to resend the verification email.": "Haz clic aquí para reenviar el correo de verificación.",
   "A new verification link has been sent to your email address.": "Se ha enviado un nuevo enlace de verificación a tu correo.",
@@ -38,7 +40,6 @@
   "Please proceed with caution, this cannot be undone.": "Procede con precaución, esto no se puede deshacer.",
   "Are you sure you want to delete your account?": "¿Estás seguro de que deseas eliminar tu cuenta?",
   "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Una vez eliminada tu cuenta, todos sus recursos y datos también se eliminarán de forma permanente. Ingresa tu contraseña para confirmar que deseas eliminar tu cuenta permanentemente.",
-  "Password": "Contraseña",
   "Cancel": "Cancelar",
   "Platform": "Plataforma",
   "Repository": "Repositorio",
@@ -46,5 +47,39 @@
   "Log out": "Cerrar sesión",
   "Sidebar": "Barra lateral",
   "Displays the mobile sidebar.": "Muestra la barra lateral en dispositivos móviles.",
-  "Toggle Sidebar": "Alternar barra lateral"
+  "Toggle Sidebar": "Alternar barra lateral",
+  "Log in to your account": "Inicia sesión en tu cuenta",
+  "Enter your email and password below to log in": "Ingresa tu correo y contraseña para iniciar sesión",
+  "Forgot password?": "¿Olvidaste tu contraseña?",
+  "Remember me": "Recuérdame",
+  "Log in": "Iniciar sesión",
+  "Don't have an account?": "¿No tienes una cuenta?",
+  "Sign up": "Regístrate",
+  "Create an account": "Crea una cuenta",
+  "Enter your details below to create your account": "Ingresa tus datos para crear tu cuenta",
+  "Create account": "Crear cuenta",
+  "Already have an account?": "¿Ya tienes una cuenta?",
+  "Register": "Registrarse",
+  "Forgot password": "Recuperar contraseña",
+  "Enter your email to receive a password reset link": "Ingresa tu correo para recibir un enlace de restablecimiento",
+  "Email password reset link": "Enviar enlace de restablecimiento",
+  "Or, return to": "O, vuelve a",
+  "log in": "iniciar sesión",
+  "Reset password": "Restablecer contraseña",
+  "Please enter your new password below": "Ingresa tu nueva contraseña a continuación",
+  "Confirm your password": "Confirma tu contraseña",
+  "This is a secure area of the application. Please confirm your password before continuing.": "Esta es un área segura de la aplicación. Confirma tu contraseña antes de continuar.",
+  "Verify email": "Verificar correo",
+  "Please verify your email address by clicking on the link we just emailed to you.": "Verifica tu correo haciendo clic en el enlace que te enviamos.",
+  "Email verification": "Verificación de correo",
+  "A new verification link has been sent to the email address you provided during registration.": "Se ha enviado un nuevo enlace de verificación al correo que proporcionaste durante el registro.",
+  "Resend verification email": "Reenviar correo de verificación",
+  "Welcome": "Bienvenido",
+  "Let's get started": "Comencemos",
+  "Read the": "Lee la",
+  "Documentation": "Documentación",
+  "Watch video tutorials at": "Mira tutoriales en",
+  "Deploy now": "Desplegar ahora",
+  "Log in": "Iniciar sesión",
+  "Register": "Registrarse"
 }
