--- a/lang/es.json
+++ b/lang/es.json
@@ -42,8 +42,7 @@
   "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Una vez eliminada tu cuenta, todos sus recursos y datos también se eliminarán de forma permanente. Ingresa tu contraseña para confirmar que deseas eliminar tu cuenta permanentemente.",
   "Cancel": "Cancelar",
   "Platform": "Plataforma",
-  "Repository": "Repositorio",
-  "Documentation": "Documentación",
+  "Repository": "Repositorio",                                                              
   "Log out": "Cerrar sesión",
   "Sidebar": "Barra lateral",
   "Displays the mobile sidebar.": "Muestra la barra lateral en dispositivos móviles.",
@@ -79,7 +78,5 @@
   "Read the": "Lee la",
   "Documentation": "Documentación",
   "Watch video tutorials at": "Mira tutoriales en",
-  "Deploy now": "Desplegar ahora",
-  "Log in": "Iniciar sesión",
-  "Register": "Registrarse"
+  "Deploy now": "Desplegar ahora"
 }
