--- a/lang/es.json
+++ b/lang/es.json
@@ -78,5 +78,9 @@
   "Read the": "Lee la",
   "Documentation": "Documentación",
   "Watch video tutorials at": "Mira tutoriales en",
-  "Deploy now": "Desplegar ahora"
+  "Deploy now": "Desplegar ahora",
+  "Users": "Usuarios",
+  "Permissions": "Permisos",
+  "Roles": "Roles",
+  "Options": "Opciones"
 }
