feat(settings-ui): add Packages link to settings menu
- Add 'Packages' navigation item to settings sidebar
- Import packagesIndex route from @/routes/settings/packages
- Add translations for 'Packages' in en.json and es.json

Users can now access /settings/packages from the Settings menu

--- a/lang/es.json
+++ b/lang/es.json
@@ -1,6 +1,7 @@
 {
   "Settings": "Configuración",
   "Manage your profile and account settings": "Administra la configuración de tu cuenta y perfil",
+  "Packages": "Paquetes",
   "Appearance settings": "Apariencia",
   "Update your account's appearance settings": "Actualiza la apariencia de tu cuenta",
   "Theme selector": "Selector de tema",
