--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,7 @@
 {
   "Settings": "Settings",
   "Manage your profile and account settings": "Manage your profile and account settings",
-  "Packages": "Packages",
+  "Package Settings": "Package Settings",
   "Appearance settings": "Appearance settings",
   "Update your account's appearance settings": "Update your account's appearance settings",
   "Theme selector": "Theme selector",
