--- a/lang/es.json
+++ b/lang/es.json
@@ -1,7 +1,7 @@
 {
   "Settings": "Configuración",
   "Manage your profile and account settings": "Administra la configuración de tu cuenta y perfil",
-  "Packages": "Paquetes",
+  "Package Settings": "Configuración de Paquetes",
   "Appearance settings": "Apariencia",
   "Update your account's appearance settings": "Actualiza la apariencia de tu cuenta",
   "Theme selector": "Selector de tema",
